🐛 fix(SchoolCarousel.tsx): wrap school logo in a figure element 🐛 fix(_schoolCarousel.scss): apply styles to the img element inside .school-logo

--- a/src/styles/components/_schoolCarousel.scss
+++ b/src/styles/components/_schoolCarousel.scss
@@ -140,17 +140,22 @@
           object-fit: cover;
           background: lightcyan;
         }
-        &.school-logo {
-          display: block;
-          width: clamp(3.5rem, 4vw, 4rem);
-          height: clamp(3.5rem, 4vw, 4rem);
-          background: var(--c-white);
-          border-top-left-radius: 0.3em;
-          border-top-right-radius: 0.3em;
-          position: absolute;
-          bottom: 0;
-          left: clamp(1rem, 2vw, 2rem);
-          overflow: hidden;
+      }
+      .school-logo {
+        display: block;
+        width: clamp(3.5rem, 4vw, 4rem);
+        height: clamp(3.5rem, 4vw, 4rem);
+        background: var(--c-white);
+        border-top-left-radius: 0.3em;
+        border-top-right-radius: 0.3em;
+        position: absolute;
+        bottom: 0;
+        left: clamp(1rem, 2vw, 2rem);
+        overflow: hidden;
+
+        img {
+          width: 100%;
+          object-fit: cover;
         }
       }
     }
